Closed
Bug 242877
Opened 22 years ago
Closed 22 years ago
Crash [@ FindInterfaceByName]
Categories
(Core Graveyard :: Web Services, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
()
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
2.05 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
websrvcs.dll!FindInterfaceByName(const char * aName=0x0012d108,
nsIInterfaceInfoSuperManager * iism=0x01923b90, nsIInterfaceInfoManager * *
aSet=0x00000000, nsIInterfaceInfo * * _retval=0x0012cf8c) Line 205 + 0x8 C++
> websrvcs.dll!FindInterfaceIndexByName(const char * aName=0x0012d108,
nsIInterfaceInfoSuperManager * iism=0x00ea3c70, nsIGenericInterfaceInfoSet *
aSet=0x0012cf8c, unsigned short * aIndex=0x0012d1d8) Line 225 + 0x16 C++
websrvcs.dll!FindOrConstructInterface(nsIInterfaceInfoSuperManager *
iism=0x0000003f, nsIGenericInterfaceInfoSet * aSet=0x00000000,
nsISchemaComplexType * aComplexType=0x01923b90, nsISchemaModelGroup *
aModelGroup=0x0012cfd8, const IIDX & iidx={...}, XPTParamDescriptor *
defaultResult=0x77f58a3a, const nsAString & qualifier={...}, unsigned short *
aTypeIndex=0x00000400) Line 472 + 0xe C++
static nsresult
FindInterfaceIndexByName(const char* aName, nsIInterfaceInfoSuperManager* iism,
nsIGenericInterfaceInfoSet* aSet, PRUint16* aIndex)
{
nsresult rv = aSet->IndexOfByName(aName, aIndex);
if (NS_SUCCEEDED(rv)) {
return NS_OK;
}
nsCOMPtr<nsIInterfaceInfo> info;
rv = FindInterfaceByName(aName, iism, /*this is bogus */nsnull,
getter_AddRefs(info));
if (NS_FAILED(rv)) {
return rv;
}
return aSet->AppendExternalInterface(info, aIndex);
}
Comment on attachment 147843 [details] [diff] [review]
stop crashing
This is not guaranteed to cause correct behavior. The original code was added
in the broken state you see today.
I do not understand any of this code and do not intend to maintain it.
Attachment #147843 -
Flags: superreview?(jst)
Attachment #147843 -
Flags: review?(jst)
Comment 3•22 years ago
|
||
Comment on attachment 147843 [details] [diff] [review]
stop crashing
>+ nsCOMPtr<nsIInterfaceInfoManager> randomManager;
>+ rv = FindInterfaceByName(aName, iism, getter_AddRefs(randomManager), getter_AddRefs(info));
How about naming that "unused" in stead?
r+sr=jst
Attachment #147843 -
Flags: superreview?(jst)
Attachment #147843 -
Flags: superreview+
Attachment #147843 -
Flags: review?(jst)
Attachment #147843 -
Flags: review+
Updated•22 years ago
|
Summary: [@ FindInterfaceByName] → Crash [@ FindInterfaceByName]
mozilla/extensions/webservices/proxy/src/wspinfoservice.cpp 1.15
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•15 years ago
|
Crash Signature: [@ FindInterfaceByName]
Updated•8 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•