Bug 242877 [@ FindInterfaceByName] r=jst sr=jst